<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wakeup.DisplayMessageActivity" 
    android:orientation="horizontal"
    android:background="@color/pink"
    android:gravity="center|top"
    
    > 
      
 <!--   
    <EditText android:id="@+id/User"
        android:layout_width="wrap_content"        
        android:layout_height="wrap_content"
        android:hint="@string/User" />
    
     <EditText android:id="@+id/Pass"
        android:layout_width="wrap_content"        
        android:layout_height="wrap_content"
        android:hint="@string/Pass" 
        android:inputType="textPassword"/>
  -->   
     <EditText
   		android:id="@+id/phoneNumber"
    	android:layout_width="wrap_content"        
        android:layout_height="wrap_content"
    	android:inputType="phone" 
    	android:hint="@string/phoneNumber"
    	android:layout_marginTop="20dp"
    	android:layout_marginLeft="60dp"
    	/>
     
     <Button
        android:id="@+id/date"
        android:layout_width="wrap_content"        
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumber"
        android:drawableRight="@drawable/calendar"
        android:text="@string/date" 
        android:layout_marginLeft="30dp"     
         />
     
     <TimePicker
        android:id="@+id/time"
        android:layout_width="wrap_content"        
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
              
         />
     <Button
        android:id="@+id/button_callMe"
        android:layout_width="wrap_content"        
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:drawableRight="@drawable/call"
        android:text="@string/button_callMe"     
        android:background="@drawable/buttoncallme" 
        
         />
     
          <Button
        android:id="@+id/button_callOther"
        android:layout_width="wrap_content"        
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_toRightOf="@+id/button_callMe"
        android:drawableRight="@drawable/call"
        android:text="@string/button_callOther"     
        android:background="@drawable/buttoncallother"
        android:layout_marginLeft="10dp"
         />
     
     
     
      
</RelativeLayout>