<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wakeup.Login1Activity"
    android:orientation="horizontal"
    android:background="@color/blue"
    android:gravity="center|top"
     >

    
     <EditText android:id="@+id/userName"
		
        android:layout_width="wrap_content"        
        android:layout_height="wrap_content"
        android:hint="@string/userName" 
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="40dp"
        />
     
     <EditText android:id="@+id/password"
		
        android:layout_width="wrap_content"        
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:hint="@string/password"
        android:ems="10"
		android:layout_marginTop="10dp"
       	android:inputType="textPassword"
        
        />
         
     <Button
        android:id="@+id/button_login" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:text="@string/button_login"
        android:background="@drawable/buttonshape"
		android:shadowColor="#ff4444" 
		android:shadowRadius="5" 
		android:layout_marginTop="20dp"
		android:layout_marginLeft="65dp"

        />
     

     <ImageView 
        android:id="@+id/pattern" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login"
        android:src="@drawable/patternpic"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="70dp"
        /> 

</RelativeLayout>
